# BraiAn

./: .gitignore  .pre-commit-config.yaml  CFOS_cell_counts_CvS.ipynb  PLS_plot.ipynb  README.md  REUSE.toml  brain_hierarchy.py  cell_count_PLS.ipynb  cell_count_normalization.ipynb  chord_diagram.ipynb  compare_experiments.ipynb  config_example.yml  cross_correlation.ipynb  environment-explicit.yml  environment.yml  example_config.toml  example_config.yml  experiment_vs_proof.ipynb  mkdocs.yml  plot.ipynb  pls_helpers.py  pls_helpersDEBUG.py  pyproject.toml  readCSV_helpers.py  rebase_experiment.ipynb  requirements.txt  visit_dict.py
.reuse/: dep5
.woodpecker/: mkdocs.yml  pypi.yml  reuse.yml
BraiAn/: __init__.py  animal_brain.py  animal_group.py  brain_data.py  brain_hierarchy.py  brain_metrics.py  brain_slice.py  chord_plot.py  cutting_atlas_fix.py  deflector.py  plot.py  plot_chord.py  pls.py  sliced_brain.py  statistics.py  utils.py  visit_dict.py
BraiAn/connectome/: connectome.py  connectome_adjacency.py  cross_correlation.py  functional.py  plot.py  plot_chord.py  pruned.py  structural.py
braian/: __init__.py  _animal_brain.py  _animal_group.py  _brain_data.py  _brain_slice.py  _core.py  _experiment.py  _graph_utils.py  _metrics_sliced.py  _ontology.py  _ontology_allen.py  _ontology_bg.py  _sliced_brain.py  animal_brain.py  animal_group.py  brain_data.py  brain_hierarchy.py  brain_metrics.py  brain_slice.py  config.py  deflector.py  experiment.py  graph_utils.py  ontology.py  ontology_bg.py  plot.py  project.py  readCSV_helpers.py  sliced_brain.py  statistics.py  utils.py  visit_dict.py
braian/connectome/: __init__.py  connectome.py  connectome_adjacency.py  cross_correlation.py  functional.py  plot.py  plot_chord.py  pruned.py  structural.py  utils_bu.py
braian/legacy/: __init__.py  _ontology_allen.py
braian/plot/: __init__.py  _generic.py  _heatmap.py  _ontology.py  _pls.py  _xmastree.py  generic.py  heatmap.py  ontology.py  pls.py  xmas_tree.py  xmastree.py
braian/resources/: CCFv3_summary_structures.csv
braian/resources/partitions/allen_mouse_50um/: major_divisions.csv
braian/resources/partitions/kim_mouse_100um/: summary_structures.csv
braian/resources/partitions/kim_mouse_50um/: major_divisions.csv
braian/resources/partitions/silvalab_mouse_10um/: summary_structures.csv
braian/stats/: __init__.py  _metrics.py  _pls.py  metrics.py  pls.py
data/: NRe_to_BLA_inputs.csv
docs/: acknowledgements.md  analysis_group.ipynb  analysis_marker.ipynb  api-braian.md  api-config.md  api-legacy.md  api-plot.md  api-stats.md  braian-python.md  braian-qupath.md  how-to-guides.md  image-analysis.md  image_analysis.md  index.md  numpy-notypes-return-fix.mustache  object-classifiers.md  read_qupath_data.ipynb  read_qupath_data.ipynb.license  reference.md  tutorials.md
docs/custom_theme/material/: main.html  style.css
docs/custom_theme/material/partials/: nav-item.html  toc-collapsible.html  toc-collapsible.html.jinja  toc-item-collapsible.html  toc-original.html  toc.html
docs/custom_theme/python/material/: attribute.html.jinja
docs/custom_theme/python/material/docstring/: parameters.html.jinja
docs/custom_theme/python/material/languages/: en.html.jinja
docs/custom_theme/python/readthedocs/docstring/: parameters.html.jinja
docs/custom_theme/python/readthedocs/languages/: en.html.jinja
docs/custom_theme/readthedocs/: style.css
docs/javascripts/: copy-codeblocks.js  favicon.js
docs/resources/: allen_ontology.html  gridplot_cfos_density_st_lvl_6.html  gridplot_cfos_vs_Arc1_density_summary_structures.html  gridplot_cfos_vs_Arc1_density_summary_structures.html.license
docs/scripts/: gen_ref_pages.py
mcp_server/: README.md  __init__.py  ast_parser.py  braian_mcp_server.py  config.py  pyproject.toml
mcp_server/tests/: __init__.py  test_ast_parser.py
notebooks/: 2channel_analysis.ipynb  PLS_plot.ipynb  cell_count_normalization.ipynb  chord_diagram.ipynb  compare_experiments.ipynb  connectome_analysis.ipynb  experiment_vs_proof.ipynb  groups_comparative_analysis.ipynb  groups_connectome_analysis.ipynb  groups_normalization.ipynb  groups_pls_comparative_analysis.ipynb  plot.ipynb  rebase_experiment.ipynb  test_gridplot.ipynb
templates/python/material/docstring/: parameters.html.jinja
templates/python/material/languages/: en.html.jinja
templates/python/readthedocs/docstring/: parameters.html.jinja
templates/python/readthedocs/languages/: en.html.jinja
tests/: test_brain_data.py  test_brain_slice.py  test_metrics.py  test_ontology.py  test_ontology_bg.py
tests/legacy/: test_legacy_csv.py  test_ontology.py  test_ontology_allen.py
