[tool.poetry]
name = "braian"
version = "0.1.0"
description = "A python library for whole-brain analysis"
authors = ["Carlo Castoldi <carlo.castoldi@outlook.com>"]
license = "MPL 2.0"
readme = "README.md"
packages = [{include = "braian"}]

[tool.poetry.dependencies]
python = ">=3.11,<4"
python-igraph = "^0.10.4"
numpy = "^1.24.3"
pandas = "^2.0.1"
plotly = "^5.14.1"
scipy = "^1.10.1"
kaleido = "0.2.1"               # used to export plotly images. "0.2.1.post1" version can't be installed
beautifulsoup4 = "^4.12.2"      # used to blacklist regions from Allen's onthology that have no annotation
brainglobe-heatmap = "^v0.5.2"  # used to visualize brain heatmap for IEGs overlaps
urllib3 = "^1.26.16"            # fix poetry+conda bug: https://github.com/python-poetry/poetry/issues/7936
tables = "^3.9.2"               # fix problem with h5py installation

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
