# SPDX-FileCopyrightText: 2024 Carlo Castoldi <carlo.castoldi@outlook.com>
#
# SPDX-License-Identifier: CC0-1.0

[project]
name = "braian"
version = "1.1.0a0"
description = "A python library for easy navigation, visualisation, and analysis of whole-brain quantification data."
homepage = "https://silvalab.codeberg.page/BraiAn/"
repository = "https://codeberg.org/SilvaLab/BraiAn"
documentation = "https://silvalab.codeberg.page/BraiAn/api-braian/"
keywords = ["data-analysis", "library", "neuroscience", "visualisation", "visualization", "whole-brain"]
authors = [
    {name = "Carlo Castoldi", email="carlo.castoldi@outlook.com" }
]
license = "LGPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11,<3.14"
packages = [{include = "braian"}]
dependencies = [
    "python-igraph (>=0.11.8,<1.0.0)",
    "numpy (>=2.0.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "plotly (>=5.24.1,<6.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "beautifulsoup4 (>=4.12.3,<=5.0.0)",        # used to blacklist regions from Allen's ontology that have no annotation
    "brainglobe-heatmap (>=0.6.0,<1.0.0)",      # used to visualize brain heatmap for IEGs overlaps
    "pywin32 (>=306) ; sys_platform == 'win32'",
    "pyyaml (>=6.0.2,<7.0.0)",
    "treelib (>=1.8.0,<2.0.0)",
]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = {git = "https://github.com/carlocastoldi/mkdocs.git", rev = "on-template"}
mkdocstrings = {extras = ["python"], version = "^0.30.0"}
mkdocs-plugin-progress = "^1.2.0"
mkdocs-material = "^9.6.18"
mkdocs-jupyter = "^0.25.1"
mkdocs-include-markdown-plugin = "^7.1.7"
mkdocs-multi-theme-plugin = {git = "https://github.com/carlocastoldi/mkdocs-multi-theme-plugin.git", rev = "master"}
mkdocs-open-in-new-tab = "^1.0.8"
markdown-captions = "^2.1.2"
griffe-warnings-deprecated = {git = "https://github.com/carlocastoldi/griffe-warnings-deprecated"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
nbformat = "^5.10.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
